--- a/Assessment/pom.xml
+++ b/Assessment/pom.xml
@@ -26,6 +26,21 @@
     <version>7.3.0</version>
     <scope>compile </scope>
 </dependency>
+<dependency>
+     <groupId>io.github.bonigarcia</groupId>
+     <artifactId>webdrivermanager</artifactId>
+     <version>2.2.5</version>
+</dependency>
+<dependency>
+     <groupId>org.seleniumhq.selenium</groupId>
+     <artifactId>selenium-chrome-driver</artifactId>
+     <version>2.50.0</version><!--Your chrome driver version-->
+</dependency>
+<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-ie-driver</artifactId>
+        <version>2.46.0</version>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
